@@ -1,10 +1,13 @@
 Revision history for Perl extension Metabrik.
 
 1.11
+   - FEATURE: Metabrik: brik_author Command
+   - FEATURE: Metabrik: optional_modules and optional_binaries Properties.
+              Also added brik_has_binary and brik_has_module Commands.
    - new: core::context: get_used Command to return a reference to a used Brik
    - new: Metabrik: brik_author Command
    - bugfix: shell::script: allow blank lines and comments
-   - FEATURE: Metabrik: brik_author Command
+   - bugfix: Metabrik: return error and not info on bad usage for some brik_has_* Commands
 
 1.10 Tue Oct 27 20:13:36 CET 2015
    - FEATURE: core::context: allows to pass complex structs arguments to run and set Commands
